Make DeleteSelectionCommand to handle ::first-letter correctly

This patch changes |DeleteSelectionCommand::HandleGeneralDelete()| to use the
clean layout tree for calling |start_node->GetLayoutObject()| after calling
|DeleteTextFromNode()| or |RemoveChildrenInRange()| to avoid removing
|start_node|.


Note: When |Text| node with ::first-letter is modified, Blink detach
layout object from it in |Text::UpdateTextLayoutObject()| to follow
|ShouldUpdateLayoutByReattaching()| which returns true for |true| for
|Text| node with ::first-letter.

Bug: 808516
Change-Id: I7139398ca3938e56960c81c9196bd58e91bed668
Reviewed-on: https://chromium-review.googlesource.com/920051
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537233}
Former-commit-id: c1ed8403d631abd0a3d010cf03794449c9289bff